First attempt BurLink WikiMap

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Leaflet Draw  Collection Tool</h1>
       </div>
       <div id="map"></div>
-      <div id="controls">
+      <div id="burlink_routes_2015">
         <p>Click points for more information, or add your own.</br></p>
         <input type="button" onclick="startEdits()" value="Click to Start Editing">
         <input type="button" onclick="stopEdits()" value="Stop Your Editing Session"><br>
@@ -43,9 +43,9 @@
     <script>
         
     //TODO: Change to your username, insert function on cartodb, and cartodb tablename
-        var cartoDBusername = "raphaeld";
+        var cartoDBusername = "hillman-ccc";
         var cartoDBinsertfunction = "insert_crowd_mapping_data";
-        var cartoDBtablename = "crowdmap_basic";
+        var cartoDBtablename = "burlink_routes_2015";
         
     // Add Data from CartoDB using the SQL API
     // Declare Variables
