--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     //TODO: Change to your username, insert function on cartodb, and cartodb tablename
         var cartoDBusername = "hillman-ccc";
         var cartoDBinsertfunction = "insert_crowd_mapping_data";
-        var cartoDBtablename = "burlink_routes_2015_1";
+        var cartoDBtablename = "BurlinkRoutesZCH";
         
     // Add Data from CartoDB using the SQL API
     // Declare Variables
