Test new blank map with updated table name

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Leaflet Draw  Collection Tool</h1>
       </div>
       <div id="map"></div>
-      <div id="testwiki">
+      <div id="testwiki_burlink">
         <p>Click points for more information, or add your own.</br></p>
         <input type="button" onclick="startEdits()" value="Click to Start Editing">
         <input type="button" onclick="stopEdits()" value="Stop Your Editing Session"><br>
@@ -45,7 +45,7 @@
     //TODO: Change to your username, insert function on cartodb, and cartodb tablename
         var cartoDBusername = "hillman-ccc";
         var cartoDBinsertfunction = "insert_crowd_mapping_data";
-        var cartoDBtablename = "testwiki";
+        var cartoDBtablename = "testwiki_burlink";
         
     // Add Data from CartoDB using the SQL API
     // Declare Variables
